--- a/Museek/Main/CameraUpload/Camera.storyboard
+++ b/Museek/Main/CameraUpload/Camera.storyboard
@@ -52,7 +52,7 @@
                                 <state key="normal" image="switch camera"/>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" alpha="0.5" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00.00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3y2-sp-DV1">
-                                <rect key="frame" x="165" y="698" width="45" height="21"/>
+                                <rect key="frame" x="165.33333333333334" y="699" width="44.666666666666657" height="20"/>
                                 <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
